# critical-ai-2026

./: .gitignore  README.md  critical_ai_2026.py  pyproject.toml  requirements.txt
data/prompts/emotion/: Bradley Lang 1992.txt  Cowen Keltner 2017.txt  Descartes 1649.txt  Ekman 1992.txt  Ekman 1999.txt  Humaine 2006.txt  James 1890.txt  Kort Reilly Picard 2001.txt  Lazarus 1996.txt  Mehrabian Russell 1980.txt  Parrott 2001.txt  Plutchik 1980.txt  Robinson 2009.txt  Russell 1980.txt  Schlosberg 1954.txt  Shaver 1987.txt  Watson Tellegen 1985.txt  Watt Smith 2016.txt  Wundt 1897.txt
notebooks/: Week3-V2.ipynb  Week3-V3.ipynb  Week3-V4.ipynb  Week3.ipynb
