[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "critical-ai-2026"
version = "0.1.0"
description = "Code and data for Critical AI course"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["critical-ai", "course", "notebooks", "colab"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/ryan/critical-ai-2026"

[tool.setuptools]
py-modules = ["critical_ai_2026"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
